--- a/COMP397-W2022-Week2/Packages/manifest.json
+++ b/COMP397-W2022-Week2/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.collab-proxy": "1.15.4",
     "com.unity.feature.mobile": "1.0.0",
+    "com.unity.formats.fbx": "4.1.2",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.12",
     "com.unity.ide.vscode": "1.2.4",
